[package]
name = "raht"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
askama = "0.12.1"
axum = { version = "0.7.7", features = ["form"] }
serde = "1.0.214"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.67"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
